# Eurospital_Eventi

./: .env.example  .gitignore  .write-test  CHANGELOG.md  DESIGN.md  INSTALL.md  PRODUCT.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_rbac.py  0002_seed_rbac.py  0003_settings.py  0005_events.py  0006_registrations.py  0007_employee_role.py  0008_notifications.py  0009_reports_permission.py  0010_ldap_users.py  0011_audit_logs.py  0012_event_reminder_template.py  0013_db_override.py  0014_event_cancelled_template.py  (+1 more)
backend/app/: cli.py  main.py
backend/tests/: conftest.py  test_attachment_api.py  test_audit_service.py  test_auth_api.py  test_catalog_api.py  test_catalog_service.py  test_catalog_visibility_ldap.py  test_category_api.py  test_celery_task.py  test_change_password_api.py  test_checkin_api.py  test_checkin_token.py  test_cli.py  test_config.py  test_cookie_auth.py  test_crypto.py  test_custom_field_api.py  test_db_base.py  test_event_api.py  test_event_models.py  test_event_state_machine.py  test_gdpr_api.py  test_health.py  test_html_sanitize.py  test_ldap_api.py  test_ldap_login.py  test_ldap_service.py  test_migration.py  test_models.py  test_notification_service.py  test_notifications_api.py  test_qr_service.py  test_rate_limit.py  test_rbac_api.py  test_registration_api.py  test_registration_enqueues.py  test_registration_models.py  test_registration_service.py  test_report_service.py  test_reports_api.py  (+8 more)
(+247 files in other folders)
