[project]
name = "eurospital-eventi-backend"
version = "0.1.0"
description = "Eurospital Eventi backend (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pymysql>=1.1",
    "cryptography>=43",
    "argon2-cffi>=23.1",
    "pyjwt>=2.9",
    "pydantic[email]>=2.5",
    "pydantic-settings>=2.5",
    "ldap3>=2.9",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
